@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'robolectric'
+apply plugin: 'jacoco'
 
 android {
     compileSdkVersion 21
@@ -27,6 +29,60 @@ android {
             resValue "bool", "debug", "false"
         }
     }
+
+    sourceSets {
+        // Move the tests to test/java, test/res, etc...
+        androidTest {
+            java.srcDirs = ['src/test/java']
+        }
+    }
+}
+
+robolectric {
+    // configure the set of classes for JUnit tests
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+
+    // configure max heap size of the test JVM
+    maxHeapSize = '2048m'
+
+    // configure the test JVM arguments
+    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
+
+    // Specify max number of processes (default is 1)
+    maxParallelForks = 4
+
+    // Specify max number of test classes to execute in a test process
+    // before restarting the process (default is unlimited)
+    forkEvery = 150
+
+    // configure whether failing tests should fail the build
+    ignoreFailures true
+
+    // use afterTest to listen to the test execution results
+    afterTest { descriptor, result ->
+        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
+    }
+}
+
+task jacocoTestReport(type: JacocoReport) {
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.destination "${buildDir}/reports/coverage"
+    }
+
+    classDirectories = fileTree(
+            dir: "${buildDir}/intermediates/classes/debug",
+            exclude: [
+                    '**/R.class',
+                    '**/R$*.class'
+            ])
+    sourceDirectories = files(android.sourceSets.main.java.srcDirs)
+    executionData = files("${buildDir}/jacoco/testDebug.exec")
+    doLast {
+        println "jacoco report has been generated to file://${reports.html.destination}/index.html"
+    }
 }
 
 dependencies {
@@ -39,4 +95,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.google.android.gms:play-services-base:6.5.87'
+    androidTestCompile 'org.robolectric:robolectric:2.4',
+            'com.squareup.assertj:assertj-android:1.0.0',
+            'junit:junit:4.11'
 }
